# Drone_follow

./: Dockerfile  README.md
multi_robot_follow/: package.xml  setup.cfg  setup.py
multi_robot_follow/launch/: multi_robot_launch.py
multi_robot_follow/models/drone/: model.sdf
multi_robot_follow/models/ground_robot/: model.sdf
multi_robot_follow/multi_robot_follow/: drone_follower.py  ground_robot_nav.py  object_detection_node.py  obstacle_comm_node.py
multi_robot_follow/rviz/: warehouse_rviz_config.rviz
multi_robot_follow/turtlebot4_gz_bringup/launch/: turtlebot4_spawn.launch.py
