<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot_follow</name>
  <version>0.1.0</version>
  <description>Multi-robot simulation using gz-sim (Gazebo Harmonic) with drone following and object detection.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>rviz2</depend>
  <depend>cv_bridge</depend>
  <!-- Modern Gazebo ROS integration -->
  <depend>ros_gz_sim</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

